Corrections in [Arithmetic_CheatSheet]

--- a/1.MP2I/1.Maths/04.Arithmetic_cheat_sheet/Arithmetic_CheatSheet.tex
+++ b/1.MP2I/1.Maths/04.Arithmetic_cheat_sheet/Arithmetic_CheatSheet.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.01.21
+% Last modification     :   2023.04.08
 %
 %------------------------------------------------------------------------
 
@@ -288,7 +288,7 @@
                 \begin{array}{l}
                     a = bq + r
                     \\
-                    0 \le r < b
+                    0 \le r < \abs b
                 \end{array}
                 \right.
             $
@@ -468,7 +468,7 @@
         \begin{indt}{\subsection{Propriétés}}
             $\forall p \in \mathbb P$, on a :
                 \[ \forall k \in \nset{1}{p - 1},\ p \left| \binom{p}{k} \right. \]
-                \[ \forall (a, b, n) \in \Z^2 \times \N,\ (a + b)^n \equiv a + b\ [p] \]
+                \[ \forall (a, b) \in \Z^2,\ (a + b)^p \equiv a + b\ [p] \]
             
             \vspace{6pt}
             
