Small correction in [Endo_in_euclidean_space]

--- a/0.MPI/1.Maths/1.Endomorphismes_espace_euclidien/Maths__endo_in_euclidean_space.tex
+++ b/0.MPI/1.Maths/1.Endomorphismes_espace_euclidien/Maths__endo_in_euclidean_space.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.12.05
+% Last modification     :   2023.04.14
 %
 %------------------------------------------------------------------------
 
@@ -662,10 +662,10 @@
                         \vspace{3pt}
                         \\
                         &\ssi&
-                        \lr{C_k}_{k \in \nset 1 n}\ \text{famille (base) libre orthonormée de}\ \R^n \simeq \mathcal M_{n, 1}(\R)
+                        \lr{C_k}_{k \in \nset 1 n}\ \text{famille (base) orthonormée de}\ \R^n \simeq \mathcal M_{n, 1}(\R)
                         \\
                         &\ssi&
-                        \lr{L_k}_{k \in \nset 1 n}\ \text{famille (base) libre orthonormée de}\ \R^n \simeq \mathcal M_{1, n}(\R)
+                        \lr{L_k}_{k \in \nset 1 n}\ \text{famille (base) orthonormée de}\ \R^n \simeq \mathcal M_{1, n}(\R)
                     \end{array}
                 \]
             \end{indt}
@@ -789,7 +789,7 @@
             \begin{indt}{\subsubsection{Définition (cas général)}}
                 Soit $E'$ un $\R$-espace vectoriel de dimension finie.
 
-                Alors \emph{Orienter} $E'$ signifie choisir une base $\mathcal B$ de $E'$ qui servira de référence : $\mathcal B$ définit le \emph{sens direct}.
+                Alors \emph{orienter} $E'$ signifie choisir une base $\mathcal B$ de $E'$ qui servira de référence : $\mathcal B$ définit le \emph{sens direct}.
 
                 \begin{indt}{De plus, $\forall \mathcal B'$ base de $E'$,}
                     $\bullet$ soit $\mathcal B'$ est \emph{directe}, lorsqu'elle vérifie
