Corrections in [Analysis_CheatSheet]

--- a/1.MP2I/1.Maths/10.Analysis_cheat_sheet/Analysis_CheatSheet.tex
+++ b/1.MP2I/1.Maths/10.Analysis_cheat_sheet/Analysis_CheatSheet.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.07.10
+% Last modification     :   2023.04.15
 %
 %------------------------------------------------------------------------
 
@@ -362,7 +362,7 @@
                 
                 Alors
                 \[
-                    \displaystyle \exists \ell \in \R\ |\ \bigcup_{n \in \N} I_n = \set \ell
+                    \displaystyle \exists \ell \in \R\ |\ \bigcap_{n \in \N} I_n = \set \ell
                 \]
 
                 et :
@@ -909,9 +909,9 @@
                 $
                     \left|
                     \begin{array}{l}
-                        \displaystyle a = \inf_I(f)
+                        \displaystyle a = \inf(I)
                         \\
-                        \displaystyle b = \sup_I(f)
+                        \displaystyle b = \sup(I)
                         \vspace{-3pt}
                     \end{array}
                     \right.
@@ -1160,7 +1160,7 @@
 
                 \textit{i.e}
                 \[
-                    \mathcal C^0(I) \subset \mathcal D(I)
+                    \mathcal D(I) \subset \mathcal C^0(I)
                 \]
             \end{indt}
 
